STIJ-148: fixed togglebutton IE background issue.

--- a/components/41-organisms/header/_header.scss
+++ b/components/41-organisms/header/_header.scss
@@ -139,8 +139,9 @@ header.header {
       font-weight: normal;
 
       &:hover,
-      &:focus {
-        background: inherit;
+      &:focus,
+      &:active {
+        background: transparent;
         color: inherit;
         text-decoration: underline;
       }
